--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,7 +20,8 @@
     "tw-elements": "^1.0.0-beta1",
     "vue": "^3.2.47",
     "vue-carousel": "^0.18.0",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
