--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,6 +22,7 @@
     "vue": "^3.2.47",
     "vue-carousel": "^0.18.0",
     "vue-router": "^4.1.6",
+    "vuedraggable": "^2.24.3",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
